--- a/theory.tex
+++ b/theory.tex
@@ -269,7 +269,7 @@ for any vectors $\E_1, \E_2$. Such a relation can be fully described by a \texti
 	{\epsrl}_{12}(\omega) & {\epsrl}_{22}(\omega) & {\epsrl}_{32}(\omega)  \\
 	{\epsrl}_{13}(\omega) & {\epsrl}_{23}(\omega) & {\epsrl}_{33}(\omega)  
 	\end{array} \right) \cdot \E.
-	\label{eq_}
+	\label{eq_epstensor}
 \end{equation}
 Elaborate discussion on the restrictions on this tensor and its physical interpretation can be found e.g. in \cite[pp. 678--686]{born1999book}. An analogous treatment can be applied to the magnetic permeability, though it is much less commonly needed.
 %}}}
