--- a/appendices.tex
+++ b/appendices.tex
@@ -1,9 +1,13 @@
-
-\section{Appendix A: from Fresnel reflection to $s$-parameter inversion} % TODO
+\section{Appendix A: from Fresnel reflection to $s$-parameter inversion} \label{app_fresnel} % TODO
 %\subsection{Frequency-band source for oblique incidence in FDTD} % TODO add this?
 \subsection{Fresnel equations} % TODO
+\mdf{
+also known as Fresnel-Airy function; 
+the resulting Fabry-Pérot resonances result in the typical Fresnel-Airy function in the transmittance spectrum;
+(note that the term of \textit{Airy function} is used also for completely different functions thorough physics, such as the eigenstate of a particle in sawtooth potential well, or the diffraction pattern from a straigth edge)
+}
 \subsection{Transmission of a slab} % TODO
-\subsection{Derivation of inverse } % TODO
+\subsection{Derivation of inverse }\label{app_fresnel_inv} % TODO
 %% TODO rewrite my "cai-shalaev" notes here
 
 \section{Appendix B: Permittivity spectra of selected materials} % TODO
