--- a/fdphd.bib
+++ b/fdphd.bib
@@ -875,6 +875,16 @@ lts.fzu.cz/pdf/d-js.pdf
   url = {http://www.opticsinfobase.org/ol/abstract.cfm?URI=ol-34-18-2778},
   abstract = {Finite-difference time-domain methods suffer from reduced accuracy when discretizing discontinuous materials. We previously showed that accuracy can be significantly improved by using subpixel smoothing of the isotropic dielectric function, but only if the smoothing scheme is properly designed. Using recent developments in perturbation theory that were applied to spectral methods, we extend this idea to anisotropic media and demonstrate that the generalized smoothing consistently reduces the errors and even attains second-order convergence with resolution.}
 }
+@article{oskooi2011distinguishing,
+  title={Distinguishing correct from incorrect PML proposals and a corrected unsplit PML for anisotropic, dispersive media},
+  author={Oskooi, Ardavan and Johnson, Steven G},
+  journal={Journal of Computational Physics},
+  volume={230},
+  number={7},
+  pages={2369--2377},
+  year={2011},
+  publisher={Elsevier}
+}
 @article{zivanovic1991subgridding,
   title={A subgridding method for the time-domain finite-difference method to solve Maxwell's equations},
   author={Zivanovic, Svetlana S and Yee, Kane S and Mei, Kenneth K},
@@ -949,6 +959,16 @@ lts.fzu.cz/pdf/d-js.pdf
 /*}}}*/
 
 % -- Material permittivity --/*{{{*/
+@article{rakic1998optical,
+  title={Optical properties of metallic films for vertical-cavity optoelectronic devices},
+  author={Rakic, Aleksandar D and Djuri{\v{s}}ic, Aleksandra B and Elazar, Jovan M and Majewski, Marian L},
+  journal={Applied optics},
+  volume={37},
+  number={22},
+  pages={5271--5283},
+  year={1998},
+  publisher={Optical Society of America}
+}
 @book{klingshirn2007semiconductor,
   title={Semiconductor optics},
   author={Klingshirn, Claus F},
