--- a/result.tex
+++ b/result.tex
@@ -37,6 +37,8 @@ It can be tuned from 173 to 184 GHz by application of electric field (40 kV/cm) 
 %% TODO remaining topics to be added: 
 %%			* PhCs with metallic/metamaterial inclusios, [Monsoriu, Lina Shi and friends]
 
+%illustrate the band-gap formation \cite{laktionov2008}
+% TODO FIND PYTHON SCRIPT ----> compare TMM and FDTD for metallic slabs
 
 \section{Wire medium} % references to -> %{{{
 \mdf{
